Fix missing space on top of fotter

--- a/Page-Adm/cards.css
+++ b/Page-Adm/cards.css
@@ -4,7 +4,7 @@
     flex: 1;
     box-sizing: content-box;
     height: fit-content;
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 40px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
